# codinggame_2022

./: Cargo.toml  build.rs  input.txt  singlefile.rs
src/: main.rs
